Fix bottom slideshow size and alignment

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -2823,11 +2823,6 @@ form#user-login, form#user-pass {
 .view-card-cycles .views-slideshow-cycle-main-frame-row {
   width: 100% !important; }
 
-.view-card-cycles [data-pane="3197"] {
-  width: 100%;
-  max-width: 350px;
-  margin: auto; }
-
 .view-card-cycles .views-slideshow-cycle-main-frame-row-item {
   padding-top: 2em;
   text-align: center;
@@ -2839,6 +2834,11 @@ form#user-login, form#user-pass {
 .view-card-cycles .field-name-field-amazon-book-listing img {
   width: 150px;
   height: auto; }
+
+[data-pane="3197"] {
+  width: 100%;
+  max-width: 350px;
+  margin: auto; }
 
 .node-type-panopoly-faq .field-name-field-categories {
   margin-top: 1em;
